fix: adjust scrollbar width and enhance hover effect for better accessibility

--- a/app/components/utils/styles/swipeList.module.css
+++ b/app/components/utils/styles/swipeList.module.css
@@ -31,7 +31,7 @@
     overflow: hidden;
     user-select: none;
     touch-action: pan-y;
-    cursor: grab;
+
     border-radius: 8px;
 }
 
@@ -40,7 +40,7 @@
 }
 
 .swipeList {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -51,7 +51,7 @@
 
 .slide {
     flex: 0 0 100%;
-    width: 100%;
+    max-width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -119,7 +119,7 @@
 .dots {
     display: flex;
     flex-direction: row;
-    gap: 0.5rem;
+    gap: 1rem;
     justify-content: center;
     align-items: center;
     padding: 0.5rem 0;
@@ -127,15 +127,20 @@
 }
 
 .dot {
-    width: var(--swiper-dot-size);
-    height: var(--swiper-dot-size);
+    width:15px;
+    height: 15px;
     border-radius: 50%;
     background-color: var(--swiper-secondary-color);
     border: none;
     padding: 0;
-    cursor: pointer;
     transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
     opacity: 0.7;
+
+    @media screen and (max-width: 768px) {
+        width: 10px;
+        height:10px;
+        
+    }
 }
 
 .dot:hover, .dot:focus {
@@ -223,10 +228,6 @@
     
     .nextButton {
         right: 5px;
-    }
-    
-    .dots {
-        gap: 0.35rem;
     }
 }
 
