--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,7 @@ body {
 }
 
 body::-webkit-scrollbar {
-  width: 8px;
+  width: 5px;
 }
 
 body::-webkit-scrollbar-track {
@@ -38,7 +38,10 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   background: linear-gradient(180deg, rgb(142, 70, 186), rgb(72, 149, 239));
-  border-radius: 4px;
+
+  &:hover {
+    background: linear-gradient(180deg, #FF8AAE, #FFDD95);
+  }
 }
 
 ::selection {
